Update CommerceTest.java